2-Kubernetes-deployment/3.ingress-no-cache.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bingo-ingress
  namespace: bingo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/limit-rps: "200"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "30s"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30s"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "30s"
spec:
  tls:
    - secretName: bingo-launc-ru-tls
      hosts:
        - bingo.launc.ru
  rules:
    - host: bingo.launc.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bingo-service
                port:
                  number: 33719
  ingressClassName: nginx
