2-Kubernetes-deployment/4.network-policy-allow-5432-only.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bingo-allow-5432-only
  namespace: bingo
spec:
  podSelector:
    matchLabels:
      app: bingoworker
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 5432
